# jaba-is-you-updated

./: .gitignore  .gitlab-ci.yml  .pylintrc  README-ru.md  README.md  eng_words  global_types.py  main.py  option_settings  profiler.py  pyproject.toml  requirements.txt  ru_words  settings.py  setup.py  utils.py
classes/: Rules.py  SoundManager.py  SpriteManager.py  animation.py  button.py  cursor.py  game_context.py  game_state.py  game_strategy.py  input.py  object_button.py  objects.py  palette.py  particle.py  player.py  progressbar.py  ray_casting.py  rule.py  rule_particle_helper.py  rules.py  slider.py  smooth_movement.py  sprite_info.py  sprite_manager.py  state.py  text_rule.py
docs/: conf.py  files.rst  index.rst
elements/: bettereditor.py  draw_matrix.py  editor.py  game.py  global_classes.py  level_loader.py  loader_util.py  main_menu.py  map_menu.py  objects.py  overlay.py  palette_choose.py  pause_menu.py  play_level.py  progressbar_menu.py  reference_point.py  settings_menu.py
jaba_speedup/: speedup.pyx
lang/: deu.json  eng.json  rus.json
levels/: .omegapog_map_file_type_MLG_1337_228_100500_69_420  0.omegapog_map_file_type_MLG_1337_228_100500_69_420  1.omegapog_map_file_type_MLG_1337_228_100500_69_420  123.omegapog_map_file_type_MLG_1337_228_100500_69_420  2.omegapog_map_file_type_MLG_1337_228_100500_69_420  3.omegapog_map_file_type_MLG_1337_228_100500_69_420  3d-crap.omegapog_map_file_type_MLG_1337_228_100500_69_420  a.omegapog_map_file_type_MLG_1337_228_100500_69_420  autosave_03_02_2022_21_41_20.omegapog_map_file_type_MLG_1337_228_100500_69_420  autosave_03_02_2022_21_42_58.omegapog_map_file_type_MLG_1337_228_100500_69_420  autosave_03_02_2022_21_45_42.omegapog_map_file_type_MLG_1337_228_100500_69_420  (+100 more)
saves/: map_saves
unused/: README.txt  draw_matrix.py
(+132 files in other folders)
